experiment2/exp2/project2.output
State 23 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 67 conflicts: 6 shift/reduce
State 68 conflicts: 6 shift/reduce
State 97 conflicts: 6 shift/reduce
State 98 conflicts: 6 shift/reduce
State 99 conflicts: 6 shift/reduce
State 100 conflicts: 6 shift/reduce
State 101 conflicts: 6 shift/reduce
State 102 conflicts: 6 shift/reduce
State 103 conflicts: 12 shift/reduce
State 104 conflicts: 12 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI

   34 DefList: Def DefList
   35        | %empty

   36 Def: Specifier DecList SEMI
   37    | error SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | Exp INT
   58    | Exp FLOAT
   59    | ID
   60    | INT
   61    | FLOAT

   62 Args: Exp COMMA Args
   63     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 33 37
INT (258) 18 57 60
FLOAT (259) 58 61
ID (260) 14 16 17 19 20 53 54 56 59
SEMI (261) 4 5 27 29 33 36 37
COMMA (262) 9 21 39 62
ASSIGNOP (263) 41 42
RELOP (264) 45
PLUS (265) 46
MINUS (266) 47 51
STAR (267) 48
DIV (268) 49
AND (269) 43
OR (270) 44
DOT (271) 56
NOT (272) 52
TYPE (273) 10
LP (274) 19 20 30 31 32 50 53 54
RP (275) 19 20 30 31 32 50 53 54
LB (276) 18 55
RB (277) 18 55
LC (278) 12 24
RC (279) 12 24
STRUCT (280) 12 13
RETURN (281) 29
IF (282) 30 31
ELSE (283) 31
WHILE (284) 32
LOWER_THAN_ELSE (285)
LOWER_THAN_COMMA (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7, on right: 2
ExtDecList (36)
    on left: 8 9, on right: 4 9
Specifier (37)
    on left: 10 11, on right: 4 5 6 7 23 36
StructSpecifier (38)
    on left: 12 13, on right: 11
OptTag (39)
    on left: 14 15, on right: 12
Tag (40)
    on left: 16, on right: 13
VarDec (41)
    on left: 17 18, on right: 8 9 18 23 40 41
FunDec (42)
    on left: 19 20, on right: 6
VarList (43)
    on left: 21 22, on right: 19 21
ParamDec (44)
    on left: 23, on right: 21 22
CompSt (45)
    on left: 24, on right: 6 28
StmtList (46)
    on left: 25 26, on right: 24 25
Stmt (47)
    on left: 27 28 29 30 31 32 33, on right: 25 30 31 32
DefList (48)
    on left: 34 35, on right: 12 24 34
Def (49)
    on left: 36 37, on right: 34
DecList (50)
    on left: 38 39, on right: 36 39
Dec (51)
    on left: 40 41, on right: 38 39
Exp (52)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61, on right: 27 29 30 31 32 41 42 43 44 45 46 47 48 49 50 51
    52 55 56 57 58 62 63
Args (53)
    on left: 62 63, on right: 53 62


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier .

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    $default  reduce using rule 7 (ExtDef)

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28


State 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 31
    ParamDec         go to state 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  go to state 34
    VarDec      go to state 16


State 22

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 23

   24 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 36
    Def              go to state 28


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   37 Def: error . SEMI

    SEMI  shift, and go to state 37


State 26

   36 Def: Specifier . DecList SEMI

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 27

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 41


State 28

   34 DefList: Def . DefList

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 42
    Def              go to state 28


State 29

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 30

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  go to state 43


State 31

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 44


State 32

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 45

    $default  reduce using rule 22 (VarList)


State 33

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 34

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 35

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


State 36

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 23
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 37

   37 Def: error SEMI .

    $default  reduce using rule 37 (Def)


State 38

   18 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 22

    $default  reduce using rule 40 (Dec)


State 39

   36 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


State 40

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 38 (DecList)


State 41

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 42

   34 DefList: Def DefList .

    $default  reduce using rule 34 (DefList)


State 43

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 23 (ParamDec)


State 44

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 45

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 30
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 32


State 46

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 47

   33 Stmt: error . SEMI

    SEMI  shift, and go to state 65


State 48

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


State 49

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


State 50

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   59    | ID .

    LP  shift, and go to state 66

    $default  reduce using rule 59 (Exp)


State 51

   51 Exp: MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 67


State 52

   52 Exp: NOT . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 68


State 53

   50 Exp: LP . Exp RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 69


State 54

   29 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 70


State 55

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 71


State 56

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 72


State 57

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 58

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 73


State 59

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 23
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 74
    Stmt      go to state 59
    Exp       go to state 60


State 60

   27 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   57    | Exp . INT
   58    | Exp . FLOAT

    INT       shift, and go to state 75
    FLOAT     shift, and go to state 76
    SEMI      shift, and go to state 77
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 61

   41 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 88


State 62

   36 Def: Specifier DecList SEMI .

    $default  reduce using rule 36 (Def)


State 63

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   go to state 38
    DecList  go to state 89
    Dec      go to state 40


State 64

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 65

   33 Stmt: error SEMI .

    $default  reduce using rule 33 (Stmt)


State 66

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 90

    Exp   go to state 91
    Args  go to state 92


State 67

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   57    | Exp . INT
   58    | Exp . FLOAT

    INT    shift, and go to state 75
    FLOAT  shift, and go to state 76
    AND    shift, and go to state 84
    OR     shift, and go to state 85
    DOT    shift, and go to state 86
    LB     shift, and go to state 87

    INT       [reduce using rule 51 (Exp)]
    FLOAT     [reduce using rule 51 (Exp)]
    AND       [reduce using rule 51 (Exp)]
    OR        [reduce using rule 51 (Exp)]
    DOT       [reduce using rule 51 (Exp)]
    LB        [reduce using rule 51 (Exp)]
    $default  reduce using rule 51 (Exp)


State 68

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   57    | Exp . INT
   58    | Exp . FLOAT

    INT    shift, and go to state 75
    FLOAT  shift, and go to state 76
    AND    shift, and go to state 84
    OR     shift, and go to state 85
    DOT    shift, and go to state 86
    LB     shift, and go to state 87

    INT       [reduce using rule 52 (Exp)]
    FLOAT     [reduce using rule 52 (Exp)]
    AND       [reduce using rule 52 (Exp)]
    OR        [reduce using rule 52 (Exp)]
    DOT       [reduce using rule 52 (Exp)]
    LB        [reduce using rule 52 (Exp)]
    $default  reduce using rule 52 (Exp)


State 69

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   57    | Exp . INT
   58    | Exp . FLOAT

    INT       shift, and go to state 75
    FLOAT     shift, and go to state 76
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    RP        shift, and go to state 93
    LB        shift, and go to state 87


State 70

   29 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   57    | Exp . INT
   58    | Exp . FLOAT

    INT       shift, and go to state 75
    FLOAT     shift, and go to state 76
    SEMI      shift, and go to state 94
    ASSIGNOP  shift, and go to state 78
    RELOP     shift, and go to state 79
    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    LB        shift, and go to state 87


State 71
